# program-mannshah24

./: PROJECT_DESCRIPTION.md
.github/workflows/: anchor-tests.yml
anchor_project/: Anchor.toml  README.md  package.json
anchor_project/programs/nft-minting/: Cargo.toml
anchor_project/programs/nft-minting/src/: errors.rs  lib.rs  state.rs
anchor_project/programs/nft-minting/src/instructions/: initialize_collection.rs  mint_nft.rs  mod.rs
anchor_project/tests/: nft-minting.ts
frontend/: .gitignore  README.md  next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: NftMintingDapp.tsx  WalletContextProvider.tsx
frontend/src/idl/: nft_minting.json  nft_minting.ts  placeholder.json
