[package]
name = "nft-minting"
version = "0.1.0"
description = "NFT Minting Program with Metaplex Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_minting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "4.1.2"
